--- a/templates/interviewer.html
+++ b/templates/interviewer.html
@@ -24,7 +24,7 @@
                 <h2>Smart Interviewer</h2>
                 <div id="videos">
                     <div id="user-video-section">
-                        <img id="user-video" src="http://127.0.0.1:5000/video_feed" alt="User Video">
+                        <img id="user-video" src="/video_feed" alt="User Video">
                         <div class="video-controls">
                             <button id="toggle-user-video" class="toggle-button" onclick="toggleVideo()">Turn Off Video</button>
                             <button id="toggle-mute" class="toggle-button">Mute</button>
